<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Put form controls here-->
        <TextView
            android:id ="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedbacktitle"
            android:textSize="20pt">
        </TextView>

        <EditText
            android:id="@+id/EditTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feedbackname"
            android:inputType="textPersonName">
        </EditText>

        <EditText
            android:id="@+id/EditTextEmail"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/feedbackemail"
            android:inputType="textEmailAddress"
            >
        </EditText>
       <!-- <Spinner
            android:id="@+id/SpinnerFeedbackType"
            android:layout_height="wrap_content"
            android:prompt="@string/feedbacktype"
            android:layout_width="fill_parent"
            android:entries="@array/feedbacktypelist">
        </Spinner>
        -->
        <EditText
            android:id="@+id/EditTextFeedbackBody"
            android:layout_height="wrap_content"
            android:hint="@string/feedbackbody"
            android:inputType="textMultiLine"
            android:layout_weight="10"
            android:gravity="top"
            android:layout_width="fill_parent">
        </EditText>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sendMessage"
            android:text="@string/feedbackbutton"
            android:layout_weight="1"
            android:textSize="10pt"
            android:textAlignment="center"
            android:gravity="right"
            />

    </LinearLayout>

