<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_perview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.i308272.feedbackform.PerviewActivity">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/PreviewTopText"
        android:textSize="20pt">
    </TextView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/preview_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preview_name"
            android:textSize="20pt" />
        <TextView
            android:id="@+id/preview_edit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/preview_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preview_email"
            android:textSize="20pt" />
        <TextView
            android:id="@+id/preview_edit_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/preview_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preview_msg"
            android:textSize="20pt" />
        <TextView
            android:id="@+id/preview_edit_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <CheckBox
        android:padding="@dimen/activity_vertical_margin"
        android:id="@+id/checkbox_term"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preview_checkbox1"
        android:onClick="checkBoxCliked"/>
    <CheckBox
        android:padding="@dimen/activity_vertical_margin"
        android:id="@+id/checkbox_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preview_checkbox2"
        android:onClick="checkBoxCliked"/>

    <Button
        android:padding="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Confirm"
        android:onClick="comfirm"/>
</LinearLayout>
